static/style.css
@import url("/css/bootstrap.min.css");
@import url("/css/grayscale.css");
@import url("/css/pastie.css");

#post table {
    table-layout: fixed;
}

#post table th:first-child,
#post table td:first-child {
    width: 140px;
}

